--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:background="@color/colorPrimary">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -103,6 +104,20 @@
                 app:setDirection="top_to_bottom"
                 app:setGravity="center"/>
 
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="添加drawable图片一起轮播"
+                android:textSize="16sp"/>
+            <com.superluo.textbannerlibrary.TextBannerView
+                android:id="@+id/tv_banner4"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:background="#cc8ac6"
+                app:setDirection="left_to_right"
+                app:setGravity="center"
+                app:setTextColor="#fff"/>
         </LinearLayout>
 
     </android.support.design.widget.AppBarLayout>
